# thomson-parabola-analyser

./: .dockerignore  .flake8  .gitignore  README.md  eval_min.sh  evaluate_results.py  flake8.sh  main.py  mypy.ini  mypy.sh  pyproject.toml  pytest.ini  requirements.txt  setup.sh  test.sh
docs/: core_pipeline.md  lines-merger-readme.md  physics.md  synthetic_data_generator.md  unet_denoiser.md  web_application.md  yolo_detector.md
oblisk/: __init__.py  cli.py  config.py  plot_display.py  plotting.py  runtime.py  runtime_unet.py  runtime_yolo.py  web_service.py
synthetic_data/: .gitignore  README.md  __init__.py  cpp_synth_visualizer.ipynb  generate_eval_synth.py  generate_image.sh  generate_synthetic_dataset.py  generate_yolo_synth_batch.py  noise_adder.ipynb  run.sh  run_optimized.sh  spot_sim.ipynb  spot_utils.py  synth_dataset_models.py  synth_dataset_noise_runtime.py  test_optimized.sh  test_physics.sh  test_regression.sh  thomson.cpp  thomson_optimized.cpp  thomson_shared.h
tests/: synthetic_pipeline_cases.py  test_batch_summary.py  test_brightest_spot.py  test_classify_lines.py  test_eval_report.py  test_geometry.py  test_overlay_pipeline.py  test_pipeline_smoke.py  test_result_timings.py  test_runtime_config.py  test_sampling_polyline_branch_break.py  test_smoke_half_width_spectra.py  test_square_yolo_crop.py  test_support_subsystems.py  test_synthetic_pipeline_e2e.py  test_web_service.py
unet-denoiser/: .gitignore  README.md  benchmark.py  improvement_plan.md  train.ipynb  train.py
web/: .gitignore  Dockerfile  README.md  docker-compose.yml  package.json  (+3 more)
(+90 files in other folders)
